updated: odin recipes with some css styles

--- a/foundations/odin_recipes/index.html
+++ b/foundations/odin_recipes/index.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <!-- page title -->
-        <h1>Odin Recipes</h1>
+        <h1 class="mainpage-title">Odin Recipes</h1>
 
         <!-- page logo -->
-        <img src="./img/page_logo.jpg" alt="Odin recipes logo" height="200" width="300">
+        <img class = "mainpage-logo" src="./img/mainpage logo.png" alt="Odin recipes logo">
 
-        <ul>
+        <ul class="mainpage-list">
             <li><a href="./recipes/ceviche.html">Ceviche</a></li>
             <li><a href="./recipes/moussaka.html">Moussaka</a></li>
             <li><a href="./recipes/chess_pie.html">Chess pie</a></li>
