--- a/foundations/odin_recipes/recipes/ceviche.html
+++ b/foundations/odin_recipes/recipes/ceviche.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Ceviche</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <!-- recipe's name -->
-        <h1>Ceviche</h1>
+        <h1 class="recipe-title">Ceviche</h1>
 
         <!-- image -->
-        <img src="../img/ceviche.png" alt="ceviche image" width="800">
+        <img class="recipe-img" src="../img/ceviche.png" alt="ceviche image" width="800">
 
         <!-- description -->
         <p><strong>Ceviche is the pride of Peru and the national dish.</strong>
@@ -21,7 +22,7 @@
 
         <!-- ingredients -->
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>1 lb (500g) flounder, sea bass or other firm white fish fillets</li>
             <li>Red onion, finely sliced</li>
             <li>Red aji limo (small red chilies), chopped into thin strips</li>
@@ -32,7 +33,7 @@
 
         <!-- steps -->
         <h2>Steps</h2>
-        <ol>
+        <ol class="steps">
             <li>Cut the fish into small chunks and mix with onion in a bowl. Wash the mix well in cold water.</li>
             <li>Season with the aji limo, aji amarillo and salt.</li>
             <li>Toss the mixture in the lime juice, adding a few ice cubes to freshen the fish.</li>
@@ -41,6 +42,6 @@
         </ol>
 
         <!-- main page link -->
-        <a href="../index.html">Return to main page</a>
+        <a class="return-mainpage" href="../index.html">Return to main page</a>
     </body>
 </html>
