--- a/foundations/odin_recipes/recipes/chess_pie.html
+++ b/foundations/odin_recipes/recipes/chess_pie.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Chess Pie</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     
     <body>
         <!-- recipe's name -->
-        <h1>Chess Pie</h1>
+        <h1 class="recipe-title">Chess Pie</h1>
 
         <!-- image -->
-        <img src="../img/chess_pie.jpg" alt="chess pie image" height="600">
+        <img class="recipe-img" src="../img/chess_pie.jpg" alt="chess pie image" height="600">
 
         <!-- description -->
         <p>This chess pie is a very old <strong>Southern recipe.</strong> It's a very sweet, rich dessert which cannot be described as anything but marvelous.<br>
@@ -19,7 +20,7 @@
 
         <!-- ingredients -->
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>½ cup butter</li>
             <li>2 cups white sugar</li>
             <li>1 teaspoon vanilla extract</li>
@@ -32,7 +33,7 @@
 
         <!-- steps -->
         <h2>Steps</h2>
-        <ol>
+        <ol class="steps">
             <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
             <li>Mix butter, sugar, and vanilla together in a large bowl.</li>
             <li>Mix in eggs</li>
@@ -44,6 +45,6 @@
         </ol>
 
         <!-- main page link -->
-        <a href="../index.html">Return to main page</a>
+        <a class="return-mainpage" href="../index.html">Return to main page</a>
     </body>
 </html>
