--- a/foundations/odin_recipes/recipes/moussaka.html
+++ b/foundations/odin_recipes/recipes/moussaka.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Moussaka</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <!-- recipe's name -->
-        <h1>Moussaka</h1>
+        <h1 class="recipe-title">Moussaka</h1>
 
         <!-- image -->
-        <img src="../img/moussaka.jpg" alt="moussaka image">
+        <img class="recipe-img" src="../img/moussaka.jpg" alt="moussaka image">
 
         <!-- description -->
         <p><strong>This moussaka tastes great!</strong><br>
@@ -18,7 +19,7 @@
 
         <!-- ingredients -->
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices</li>
             <li>salt to taste</li>
             <li>¼ cup olive oil</li>
@@ -43,7 +44,7 @@
 
         <!-- steps -->
         <h2>Steps</h2>
-        <ol>
+        <ol class="steps">
             <li>Lay eggplant slices on paper towels; sprinkle lightly with salt.<br> Let sit for 30 minutes to draw out moisture, then pat dry with paper towels. </li>
             <br>
             <li>Warm olive oil in a skillet over high heat. Fry eggplant until browned, 2 to 3 minutes per side.<br> Drain on paper towels; set aside. </li>
@@ -72,6 +73,6 @@
         </ol>
 
         <!-- main page link -->
-        <a href="../index.html">Return to main page</a>
+        <a class="return-mainpage" href="../index.html">Return to main page</a>
     </body>
 </html>
